--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -2869,7 +2869,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Bar chart untuk mengetahui pada bulan apa pemakaian sewa sepeda terbanyak\n",
+        "# Pada bulan apa pemakaian sewa sepeda terbanyak ?\n",
+        "\n",
+        "# Penyajian bentuk Bar chart\n",
+        "\n",
         "plt.bar(x=df_hour['mnth'], height=df_hour['registered'], color='green')\n",
         "plt.xticks(rotation=45)\n",
         "plt.show()"
@@ -2908,6 +2911,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Lebih banyak mana penyewa sepeda dari yang sudah terdaftar (registered) dibandingkan penyewa yang tidak terdaftar (casual) ?\n",
+        "\n",
         "# Explanatory Analysis\n",
         "\n",
         "import pandas as pd\n",
