--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -37,8 +37,8 @@
         "id": "GmQeQ5YF8DC0"
       },
       "source": [
-        "- Pertanyaan 1\n",
-        "- Pertanyaan 2"
+        "- Bagaimana pola pergerakan bulanan nya penyewaan sepeda ?\n",
+        "- Penyewa sepeda seperti apa yang memiliki kontribusi lebih besar? Penyewa terdaftar (registered) atau non-registered (casual) ?"
       ]
     },
     {
