--- a/Proyek_Analisis_Data.ipynb
+++ b/Proyek_Analisis_Data.ipynb
@@ -459,11 +459,11 @@
         "df_hour.season.unique()"
       ],
       "metadata": {
-        "id": "x-SsgmrfwjW6",
-        "outputId": "904511b3-088e-4d7b-9f0d-0f3c45dffca6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x-SsgmrfwjW6",
+        "outputId": "904511b3-088e-4d7b-9f0d-0f3c45dffca6"
       },
       "execution_count": 39,
       "outputs": [
@@ -2808,8 +2808,9 @@
       "cell_type": "markdown",
       "source": [
         "**Insight:**\n",
-        "- xxx\n",
-        "- xxx"
+        "- Kolom dteday tidak dapat dicari rata-rata, quartil atas, quartil bawah, max, dsb dikarenakan bukan data numeric. Melainkan data categorical.\n",
+        "- Saat melihat distribusi data secara cepat, karena kolom registered dan casual dibutuhkan untuk menjawab pertanyaan, maka saat dilihat ternyata distribusi nya tidak merata.\n",
+        "- Secara harian penyewaan ternyata TOP5 terjadi 3x di bulan Sep & 2x di bulan Nov."
       ],
       "metadata": {
         "id": "th_Lzl2Fkj9O"
