--- a/Submission/notebook.ipynb
+++ b/Submission/notebook.ipynb
@@ -16,7 +16,7 @@
         "id": "H9wADwK78DCz"
       },
       "source": [
-        "# Proyek Analisis Data: [Input Nama Dataset]\n",
+        "# Proyek Analisis Data: Persewaan Sepeda\n",
         "- **Nama:** Anindita Gayatri\n",
         "- **Email:** agayatri123@yahoo.co.id\n",
         "- **ID Dicoding:** anindita_gayatri_ukA6"
