--- a/Submission/notebook.ipynb
+++ b/Submission/notebook.ipynb
@@ -88,11 +88,11 @@
       "execution_count": 5,
       "metadata": {
         "id": "zjCBk1BI8DC1",
-        "outputId": "d85bb374-d83a-4f05-d43d-243045fe820d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "d85bb374-d83a-4f05-d43d-243045fe820d"
       },
       "outputs": [
         {
@@ -3308,6 +3308,31 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Conclusion**"
+      ],
+      "metadata": {
+        "id": "hmXEN6fy0EP1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Konklusi pertanyaan 1 : Bagaimana pola pergerakan bulanan nya penyewaan sepeda ?\n",
+        "\n",
+        "Jawab : Ternyata setelah dianalisa dan grafiknya terlihat di sub-bagian Visualization & Explanatory Analysis terlihat pola pergerakan penyewaan sepeda per bulan nya relatif rendah untuk akhir tahun Dec hingga awal tahun Feb. Namun mengalami kenaikan di pertengahan tahun sekitar Juni dimana puncaknya di kisaran bulan September dan Oktober.\n",
+        "\n",
+        "\n",
+        "2. Konklusi pertanyaan 2 : Penyewa sepeda seperti apa yang memiliki kontribusi lebih besar? Penyewa terdaftar (registered) atau non-registered (casual) ?\n",
+        "\n",
+        "Jawab : Ternyata setelah dianalisa dan grafiknya terlihat di sub-bagian Visualization & Explanatory Analysis terlihat penyewa sepeda terdaftar (registered) konsisten selalu lebih banyak dibandingkan penyewa yang tidak terdaftar (casual) dalam musim apapun."
+      ],
+      "metadata": {
+        "id": "1qrWiSRV0IuG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pip\n",
@@ -3337,29 +3362,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# **Conclusion**"
+        "all_df.to_csv(\"all_data.csv\", index=False)"
       ],
       "metadata": {
-        "id": "XqRghreqq-df"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1. Konklusi pertanyaan 1 : Bagaimana pola pergerakan bulanan nya penyewaan sepeda ?\n",
-        "\n",
-        "Jawab : Ternyata setelah dianalisa dan grafiknya terlihat di sub-bagian Visualization & Explanatory Analysis terlihat pola pergerakan penyewaan sepeda per bulan nya relatif rendah untuk akhir tahun Dec hingga awal tahun Feb. Namun mengalami kenaikan di pertengahan tahun sekitar Juni dimana puncaknya di kisaran bulan September dan Oktober.\n",
-        "\n",
-        "\n",
-        "2. Konklusi pertanyaan 2 : Penyewa sepeda seperti apa yang memiliki kontribusi lebih besar? Penyewa terdaftar (registered) atau non-registered (casual) ?\n",
-        "\n",
-        "Jawab : Ternyata setelah dianalisa dan grafiknya terlihat di sub-bagian Visualization & Explanatory Analysis terlihat penyewa sepeda terdaftar (registered) konsisten selalu lebih banyak dibandingkan penyewa yang tidak terdaftar (casual) dalam musim apapun."
-      ],
-      "metadata": {
-        "id": "L_KBkRj7v806"
-      }
+        "id": "qGH-70VYz-me"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
