--- a/Submission/notebook.ipynb
+++ b/Submission/notebook.ipynb
@@ -3365,30 +3365,30 @@
       "cell_type": "code",
       "source": [
         "# abaikan jika sudah terinstal\n",
-        "pip install virtualenv\n",
+        "pip install pipenv\n",
         "\n",
         "# membuat virtual environment\n",
-        "virtualenv <nama_env>\n",
+        "pipenv install\n",
         "\n",
         "# mengaktifkan virtual environment\n",
-        "source <nama_env>/bin/activate"
+        "pipenv shell"
       ],
       "metadata": {
-        "id": "BWgxbaKAQC_2",
-        "outputId": "bc08232f-f685-439a-f7d0-e7bdc20a1121",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "id": "BWgxbaKAQC_2",
+        "outputId": "4484bdee-c2bd-4c8d-e675-8553ab17c7f3"
       },
-      "execution_count": 72,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-72-cb3d955a8b87>, line 2)",
+          "evalue": "invalid syntax (<ipython-input-75-b9e2ea51ae73>, line 2)",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-72-cb3d955a8b87>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    pip install virtualenv\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-75-b9e2ea51ae73>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    pip install pipenv\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
